--- a/src/component/projects.css
+++ b/src/component/projects.css
@@ -1,6 +1,11 @@
+body {
+  background-color: #242426; 
+}
+
+
 .all-section {
   display: flex;
-  gap: 3rem;
+  gap: 5rem;
   background-color: #242426;
 }
 
@@ -9,7 +14,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 3rem;
+  gap: 1rem;
   flex-grow: 1;
   align-items: start;
 }
@@ -23,6 +28,7 @@ button {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin: 30px 0px 0px 20px;
   
 }
 
@@ -34,13 +40,13 @@ button {
   text-align: center;
   font-size: 1.05rem;
   text-transform: capitalize;
-  opacity: 0.5;
+  opacity: 0.7;
   border-radius: 5px;
   transition: 0.3s;
   color: rgb(255, 255, 255); 
-  border-color: rgb(255, 255, 255);
+  border-color: rgb(163, 175, 240);
   border-style: solid;
-  margin: 10px;
+  margin-bottom: 20px;
 }
 
 button:hover {
@@ -49,12 +55,12 @@ button:hover {
 
 }
 
-main section.left-section.flex button.active {
-  opacity: 1;
+button.active {
   font-weight: bold;
   letter-spacing: 0.6px;
   padding: 0.8rem 0;
-  border: 1px solid;
+  border: 3px solid;
+  border-color: rgb(247, 90, 90);
 
 }
 
@@ -63,17 +69,17 @@ main section.left-section.flex button.active {
   flex-direction: column;
   width: 250px;
   height: 165px;
-  padding: 0.7rem;
-  margin-top: 10px;
+  padding: 0.5rem;
+  margin-top: 5px;
   margin-right: 20px;
   background: #242426;
   border-radius: 8px;
-  border-color: rgb(0, 136, 255);
-  backdrop-filter: blur(5px);
-  border-bottom: 3px solid rgba(255, 255, 255, 0.440);
+  border-color: rgb(163, 175, 240);
+  border-style: solid;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.440);
   border-left: 2px #29252D outset;
-  /* box-shadow: -40px 50px 30px rgba(0, 0, 0, 0.280); */
-  transform: skewX(5deg);
+  /* box-shadow: -40px 50px 30px rgba(117, 114, 114, 0.28); */
+  transform: skewX(3deg);
   transition: .3s;
   overflow: hidden;
   color: rgb(255, 255, 255);
@@ -85,4 +91,43 @@ main section.left-section.flex button.active {
   height: 300px;
   transform: skew(0deg);
 
+}
+
+
+.title {
+  font-size: 1.05rem;
+  text-transform: capitalize;
+}
+
+a:link {
+  color: rgb(0, 204, 255);
+}
+
+/* visited link */
+a:visited {
+  color: rgb(146, 152, 248);
+}
+
+/* mouse over link */
+a:hover {
+  color: rgb(251, 252, 192);
+}
+
+/* selected link */
+a:active {
+  color: blue;
+}
+
+
+img {
+  max-width: 300px;     
+  min-height: 170px;    
+  object-fit: cover; 
+  opacity: 0.5;
+  filter: grayscale(100%);
+}
+
+img:hover {
+  opacity: 1;
+  filter: unset;
 }
