--- a/src/component/1-Header/header.css
+++ b/src/component/1-Header/header.css
@@ -3,13 +3,16 @@
 ----------------------------------------------- */
 
 header.flex {
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
     padding: 0 2.4rem;
     margin-top: 1.2rem;
 }
 
 header.flex nav {
-
+    flex-grow: 1;
+    align-items: start;
     background-color: var(--bgheader);
     padding: 0.77rem 1.6rem;
     border-radius: 55px;
@@ -25,29 +28,40 @@ header .flex a {
 
 
 header ul.flex {
-    gap: 16px;
+    
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    align-items: center;
+    justify-content: center;
+    list-style-type: none; 
+    padding: 0; 
 }
 
 
-header ul li a:hover {
+header ul li a {
     color: var(--title);
-    opacity: 0.9;
-    font-size: 0.88;
-    font-weight: 500;
+    opacity: 0.6;
+    font-size: 1.5rem;
+    font-weight: 400;
+    transition: 0.3s;
+    text-decoration: none;
 }
 
 
 header ul li a:hover {
     color: var(--blue);
     opacity: 1;
-    font-size: 0.9;
-
+    font-size: 2rem;
+    font-weight: 500;
+    text-decoration:underline;
 }
 
 /* ---------------------------------------------------
 2-button and icon
 --------------------------------------------------- */
 header button {
+
     font-size: 1.2rem;
 }
 
@@ -60,21 +74,23 @@ header button.menu {
 header .icon-menu,
 header button.mode {
     background-color: var(--bgheader);
-    height: 2rem;
-    width: 2rem;
-    border-radius: 50%;
+    height: 3rem;
+    width: 3rem;
+    border-radius: 55px;
     justify-content: center;
     text-align: center;
     color: var(--subtitle);
-    border: 1px solid rgba(244, 165, 96, 0.249);
+    /* border: 1px solid rgba(244, 165, 96, 0.249); */
     transition: 0.3s;
     box-shadow: 1px 1px 40px rgba(35, 35, 36, 0.165);
+    margin-top: .4rem;
+
 }
 
 header .icon-menu:hover,
 header button.mode:hover {
-    color: var(--title);
-    border: 1px solid rgb(244, 165, 96);
+    /* color: var(--title); */
+    /* border: 1px solid rgb(244, 165, 96); */
 
 
 
@@ -94,8 +110,8 @@ header .icon-close:hover {
 
 }
 
-header .icon-sun{
-color: rgb(255, 165, 0);
+header .icon-sun {
+    color: rgb(255, 165, 0);
 }
 
 /* --------------------------------------------------
@@ -105,7 +121,7 @@ header .fixed {
     position: fixed;
     inset: 0;
     z-index: 11;
-    background-color: rgba(40, 40, 48, 0.91);
+    background-color: #242426;
     backdrop-filter: blur(4px);
 }
 
@@ -177,4 +193,15 @@ header .fixed ul.model li a {
         display: block;
     }
 
+}
+
+
+body.light {
+    background-color: white;
+    color: black;
+}
+
+body.dark {
+    background-color: #242426;
+    color: white;
 }
