--- a/src/component/Detail/Detail.css
+++ b/src/component/Detail/Detail.css
@@ -1,6 +1,6 @@
 .singlePage {
     padding: 50px 0;
-    background: #fff;
+    /* background: #fff; */
   }
   
   .singlePage img {
@@ -19,6 +19,7 @@
     font-size: 18px;
     line-height: 2;
     text-transform: capitalize;
+    color: var(--subtitle);
   }
   
   .singlePage .buttons {
