--- a/src/component/4-Contact/contact.css
+++ b/src/component/4-Contact/contact.css
@@ -86,11 +86,11 @@ section.contact-us #message {
     resize: vertical;
 }
 
-section.contact-us .submit {
+.submit {
    
-    background-color: rgba(36, 37, 46, 1);
-justify-content: center;
-align-items: center;
+    background-color:var(--subtitle);
+/* justify-content: center; */
+/* align-items: center; */
     padding: 0.75rem 2rem;
     text-align: center;
     font-size: 1.05rem;
@@ -99,12 +99,16 @@ align-items: center;
     border-radius: 5px;
     transition: 0.3s;
     border: 1px solid rgb(63, 63, 70);
+    margin-left: 115px;
+    color:var(--subtitle);
 
 }
 
 section.contact-us .submit:hover {
     scale: 0.95;
 }
+
+
 
 
 /* 
