--- a/src/component/4-Contact/contact.css
+++ b/src/component/4-Contact/contact.css
@@ -1,12 +1,18 @@
 .flex  {
     display: flex;
     flex-direction: row;
+    
+}
+
+.contact-us {
+    margin-left: 2rem;
 }
 
 section.contact-us .icon-envelope {
     color: var(--subtitle);
     margin-right: 1rem;
     font-size: 1.8rem;
+    
 
 }
 
@@ -15,6 +21,7 @@ section.contact-us .title {
     font-size: 2.1rem;
     color: var(--title);
     margin-bottom: 1rem;
+    
 }
 
 section.contact-us .sub-title {
@@ -22,10 +29,12 @@ section.contact-us .sub-title {
     margin-bottom: 2rem;
     line-height: 1.65rem;
 
+
 }
 
 section.contact-us label {
     color: var(--subtitle);
+    
 
 }
 
@@ -40,6 +49,7 @@ section.contact-us #message {
     border-radius: 5px;
     transition: 0.3s;
     font-size: 1.1rem;
+    
 }
 
 
@@ -125,12 +135,15 @@ section.contact-us .submit:hover {
         display: flex;
         flex-direction: column;
         width: 85px;
+        
+
 
     }
 
     section.contact-us form div.flex {
         flex-direction: column;
         align-items: start;
+
 
     }
 
