--- a/src/component/5-Footer/footer.css
+++ b/src/component/5-Footer/footer.css
@@ -3,8 +3,8 @@ footer.flex {
     padding-bottom: 1.9rem;
     margin-top: 30px;
     box-shadow: 1px 1px 20px rgba(144, 142, 142, 0.23);
-    padding-top: 10px;
-
+    padding: 15px 0;
+   
 }
 
 footer.flex ul {
