--- a/src/component/projects.css
+++ b/src/component/projects.css
@@ -34,23 +34,23 @@ button {
 
 
 button {
-  background-color: #242426;
+  background-color: var(--bgheader);
   width: 10rem;
   padding: 0.75rem 0;
   text-align: center;
   font-size: 1.05rem;
   text-transform: capitalize;
-  opacity: 0.7;
+  opacity: 0.5;
   border-radius: 5px;
   transition: 0.3s;
-  color: rgb(255, 255, 255); 
+  color: var(--subtitle);
   border-color: rgb(163, 175, 240);
   border-style: solid;
   margin-bottom: 20px;
 }
 
 button:hover {
-  opacity: 1;
+  opacity:unset;
   cursor: pointer;
 
 }
@@ -72,7 +72,7 @@ button.active {
   padding: 0.5rem;
   margin-top: 5px;
   margin-right: 20px;
-  background: #242426;
+  background-color: var(--bgheader);
   border-radius: 8px;
   border-color: rgb(163, 175, 240);
   border-style: solid;
@@ -82,7 +82,7 @@ button.active {
   transform: skewX(3deg);
   transition: .3s;
   overflow: hidden;
-  color: rgb(255, 255, 255);
+  color: var(--subtitle);
 }
 
 .card:hover {
